--- a/package.json
+++ b/package.json
@@ -25,11 +25,9 @@
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
-    "@ngx-formly/bootstrap": "^5.0.0",
-    "@ngx-formly/core": "^5.0.0",
-    "@ngx-formly/schematics": "^5.9.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "all": "0.0.0",
     "bootstrap": "^5.0.0-alpha1",
     "moment": "^2.27.0",
     "popper.js": "^1.16.0",
