--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
+    "@ngrx/effects": "^10.0.0",
+    "@ngrx/router-store": "^10.0.0",
+    "@ngrx/store": "^10.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "all": "0.0.0",
@@ -33,12 +36,14 @@
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "tslint": "^6.1.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.901.9",
     "@angular/cli": "~9.1.9",
     "@angular/compiler-cli": "~9.1.11",
+    "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
