--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
+    "tslint-angular": "^3.0.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.8.3"
   }
