--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "all": "0.0.0",
     "bootstrap": "^5.0.0-alpha1",
+    "guid-typescript": "^1.0.9",
     "moment": "^2.27.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
