--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -1,44 +1,37 @@
-worker_processes 4;
+server {
+    listen 0.0.0.0:8081;
+    root /app;
 
-events {
-    worker_connections 1024;
-}
+    index index.html;
 
-http {
-    server {
-        listen 80;
-        root /usr/share/nginx/html/OS2IoT-frontend;
-        include /etc/nginx/mime.types;
-
-        location / {
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                #
-                # Custom headers and headers various browsers *should* be OK with but aren't
-                #
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-                #
-                # Tell client that this pre-flight info is valid for 20 days
-                #
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            if ($request_method = 'POST') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-            }
-            if ($request_method = 'GET') {
-                add_header 'Access-Control-Allow-Origin' '*';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-                add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-            }
-            try_files $uri /index.html;
-        }
+    location / {
+        #if ($request_method = 'OPTIONS') {
+        #    add_header 'Access-Control-Allow-Origin' '*' always;
+        #    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        #    #
+        #    # Custom headers and headers various browsers *should* be OK with but aren't
+        #    #
+        #    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        #    #
+        #    # Tell client that this pre-flight info is valid for 20 days
+        #    #
+        #    add_header 'Access-Control-Max-Age' 1728000 always;
+        #    add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+        #    add_header 'Content-Length' 0 always;
+        #    return 204;
+        #}
+        #if ($request_method = 'POST') {
+        #    add_header 'Access-Control-Allow-Origin' '*' always;
+        #    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        #    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        #    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        #}
+        #if ($request_method = 'GET') {
+        #    add_header 'Access-Control-Allow-Origin' '*' always;
+        #    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        #    add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        #    add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+        #}
+        try_files $uri $uri/ /index.html;
     }
 }
