--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "all": "0.0.0",
     "bootstrap": "^5.0.0-alpha1",
     "guid-typescript": "^1.0.9",
+    "jwt-decode": "^3.0.0-beta.2",
     "moment": "^2.27.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
@@ -50,6 +51,7 @@
     "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jwt-decode": "^2.2.1",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "eslint": "^7.3.1",
