--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "all": "0.0.0",
     "bootstrap": "^5.0.0-alpha1",
     "guid-typescript": "^1.0.9",
-    "jwt-decode": "^3.0.0-beta.2",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
