--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss",
-              "src/assets/scss/setup/_material-theme.scss"
+              "src/styles.scss"
             ],
             "scripts": [
               "node_modules/popper.js/dist/umd/popper.min.js",
