--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
+    "ng-inline-svg": "^11.0.0",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
