--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "all": "0.0.0",
     "bootstrap": "^5.0.0-alpha1",
+    "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^2.2.0",
     "moment": "^2.27.0",
