--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --watch",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -34,6 +34,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "all": "0.0.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.0.0-alpha1",
     "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
