--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,11 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico", 
+              "src/assets",
+              { "glob": "**/*", "input": "node_modules/ngx-monaco-editor/assets/monaco", "output": "./assets/monaco/" }
+            ],
             "styles": [
               "./node_modules/animate.css/animate.min.css",
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
