--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.27.0",
     "ng": "0.0.0",
     "ng-inline-svg": "^11.0.0",
+    "ngx-monaco-editor": "^9.0.0",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
