--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "os2-io-t-frontend",
-  "version": "0.0.1",
+  "name": "os2iot-frontend",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --watch",
