--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "~9.1.11",
     "@angular/localize": "^9.1.11",
     "@angular/material": "^9.2.4",
+    "@angular/material-moment-adapter": "^9.2.4",
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
