--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "all": "0.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "5.0.0-alpha2",
+    "chart.js": "^3.7.1",
     "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^2.2.0",
