--- a/package.json
+++ b/package.json
@@ -11,24 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.11",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "~9.1.11",
-    "@angular/compiler": "~9.1.11",
-    "@angular/core": "~9.1.11",
-    "@angular/forms": "~9.1.11",
-    "@angular/localize": "^9.1.11",
-    "@angular/material": "^9.2.4",
-    "@angular/material-moment-adapter": "^9.2.4",
-    "@angular/platform-browser": "~9.1.11",
-    "@angular/platform-browser-dynamic": "~9.1.11",
-    "@angular/router": "~9.1.11",
+    "@angular/animations": "~10.2.5",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "~10.2.5",
+    "@angular/compiler": "~10.2.5",
+    "@angular/core": "~10.2.5",
+    "@angular/forms": "~10.2.5",
+    "@angular/localize": "^10.2.5",
+    "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^10.2.7",
+    "@angular/platform-browser": "~10.2.5",
+    "@angular/platform-browser-dynamic": "~10.2.5",
+    "@angular/router": "~10.2.5",
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -38,7 +38,7 @@
     "chart.js": "^3.7.1",
     "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
-    "jwt-decode": "^2.2.0",
+    "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "moment": "^2.27.0",
     "ng": "0.0.0",
@@ -47,34 +47,34 @@
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "tslint": "^6.1.3",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.12",
-    "@angular/cli": "~9.1.9",
-    "@angular/compiler-cli": "~9.1.11",
+    "@angular-devkit/build-angular": "^0.1002.4",
+    "@angular/cli": "~10.2.4",
+    "@angular/compiler-cli": "~10.2.5",
     "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jwt-decode": "^2.2.1",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "eslint": "^7.3.1",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~5.0.9",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "ngrx-store-freeze": "^0.2.4",
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint-angular": "^3.0.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~3.8.3"
+    "typescript": "~4.0.8"
   }
 }
