--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
+    "@angular/animations": "~12.2.16",
     "@angular/cdk": "^11.2.13",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/localize": "^11.2.14",
+    "@angular/common": "~12.2.16",
+    "@angular/compiler": "~12.2.16",
+    "@angular/core": "~12.2.16",
+    "@angular/forms": "~12.2.16",
+    "@angular/localize": "^12.2.16",
     "@angular/material": "^11.2.13",
     "@angular/material-moment-adapter": "^11.2.13",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/platform-browser": "~12.2.16",
+    "@angular/platform-browser-dynamic": "~12.2.16",
+    "@angular/router": "~12.2.16",
     "@auth0/angular-jwt": "^5.0.1",
-    "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -41,20 +41,21 @@
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "moment": "^2.27.0",
+    "monaco-editor": "^0.24.0",
     "ng": "0.0.0",
     "ng-inline-svg": "^11.0.0",
-    "ngx-monaco-editor": "^9.0.0",
+    "ngx-monaco-editor": "^12.0.0",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/cli": "~11.2.19",
-    "@angular/compiler-cli": "~11.2.14",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.16",
     "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -75,6 +76,6 @@
     "ts-node": "~8.3.0",
     "tslint-angular": "^3.0.3",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "~4.0.8"
+    "typescript": "~4.3.5"
   }
 }
