--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/localize": "^13.3.11",
-    "@angular/material": "^13.3.9",
-    "@angular/material-moment-adapter": "^13.3.9",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/animations": "~14.2.3",
+    "@angular/cdk": "^14.2.2",
+    "@angular/common": "~14.2.3",
+    "@angular/compiler": "~14.2.3",
+    "@angular/core": "~14.2.3",
+    "@angular/forms": "~14.2.3",
+    "@angular/localize": "^14.2.3",
+    "@angular/material": "^14.2.2",
+    "@angular/material-moment-adapter": "^14.2.2",
+    "@angular/platform-browser": "~14.2.3",
+    "@angular/platform-browser-dynamic": "~14.2.3",
+    "@angular/router": "~14.2.3",
     "@auth0/angular-jwt": "^5.0.1",
-    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@ng-bootstrap/schematics": "^2.0.0-alpha.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@popperjs/core": "^2.11.6",
     "all": "0.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "5.0.0-alpha2",
@@ -53,9 +54,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.9",
+    "@angular-devkit/build-angular": "^14.2.3",
     "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
+    "@angular/compiler-cli": "~14.2.3",
     "@ngrx/store-devtools": "^10.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
