deps(build): update @angular/cli to v14.x
deps(build): update popper.js to v1.16.1. Used by old bootstrap.
deps(build): update rxjs to 6.6.7
deps(build): remove @ng-bootstrap/schematics. Already bundled in
@ng-bootstrap/ng-bootstrap@6.1.x
fix: most style warnings. A6llow moment default import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "importHelpers": true,
     "target": "es2015",
     "lib": ["es2018", "dom"],
+    "allowSyntheticDefaultImports": true,
     "typeRoots": ["node_modules/@types"],
     "paths": {
       "@shared-material": ["src/app/shared/modules/material.module"],
