--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
+    "ua-parser-js": "^1.0.33",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
