--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "monaco-editor": "^0.33.0",
     "ng": "0.0.0",
     "ng-inline-svg": "^11.0.0",
+    "ngx-cookie-service": "^14.0.1",
     "ngx-monaco-editor-v2": "^14.0.4",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
