now possible to maximize maps.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/router": "^14.2.3",
     "@auth0/angular-jwt": "^5.0.1",
     "@fortawesome/angular-fontawesome": "^0.11.1",
-    "@fortawesome/fontawesome-free": "^5.13.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
@@ -39,7 +39,8 @@
     "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^3.1.2",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.9.4",
+    "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.29.4",
     "monaco-editor": "^0.33.0",
     "ng": "0.0.0",
@@ -62,6 +63,8 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^3.1.0",
+    "@types/leaflet": "^1.9.8",
+    "@types/leaflet.fullscreen": "^3.0.2",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.2",
     "eslint": "^7.3.1",
