--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
-    "leaflet-geosearch": "^3.11.1",
+    "leaflet-geosearch": "3.11.1",
     "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.29.4",
     "monaco-editor": "^0.33.0",
