--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
         "xml2js": "^0.6.2",
         "babel-plugin-polyfill-corejs3": "0.8.6",
         "babel-plugin-polyfill-corejs2": "0.4.6",
-        "babel-plugin-polyfill-regenerator": "0.5.3"
+        "babel-plugin-polyfill-regenerator": "0.5.3",
+        "webpack-dev-middleware": "5.3.4"
     }
 }
