--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "@angular/core": "^15.2.10",
     "@angular/forms": "^15.2.10",
     "@angular/localize": "^15.2.10",
-    "@angular/material": "^14.2.2",
-    "@angular/material-moment-adapter": "^14.2.2",
+    "@angular/material": "^15.2.2",
+    "@angular/material-moment-adapter": "^15.2.2",
     "@angular/platform-browser": "^15.2.10",
     "@angular/platform-browser-dynamic": "^15.2.10",
     "@angular/router": "^15.2.10",
     "@auth0/angular-jwt": "^5.0.1",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/angular-fontawesome": "^0.12.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.6",
@@ -43,11 +43,11 @@
     "leaflet-geosearch": "3.6.1",
     "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.29.4",
-    "monaco-editor": "^0.33.0",
+    "monaco-editor": "^0.34.1",
     "ng": "0.0.0",
     "ng-inline-svg": "^11.0.0",
-    "ngx-cookie-service": "^14.0.1",
-    "ngx-monaco-editor-v2": "^14.0.4",
+    "ngx-cookie-service": "^15.0.0",
+    "ngx-monaco-editor-v2": "^15.0.1",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
     "proj4leaflet": "^1.0.2",
@@ -61,7 +61,7 @@
     "@angular-devkit/build-angular": "^15.2.11",
     "@angular/cli": "^15.2.11",
     "@angular/compiler-cli": "^15.2.10",
-    "@ngrx/store-devtools": "^14.3.3",
+    "@ngrx/store-devtools": "^15.4.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^3.1.0",
@@ -89,6 +89,8 @@
     "typescript": "~4.9.5"
   },
   "overrides": {
+    "@angular/common": "^15.2.10",
+    "@angular/core": "^15.2.10",
     "postcss": "^8.4.31",
     "tough-cookie": "^4.1.3",
     "xml2js": "^0.6.2",
