--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.12",
-    "@angular/cdk": "^15.2.9",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.12",
     "@angular/compiler": "^16.2.12",
     "@angular/core": "^16.2.12",
     "@angular/forms": "^16.2.12",
     "@angular/localize": "^16.2.12",
-    "@angular/material": "^15.2.2",
-    "@angular/material-moment-adapter": "^15.2.2",
+    "@angular/material": "^16.2.14",
+    "@angular/material-moment-adapter": "^16.2.14",
     "@angular/platform-browser": "^16.2.12",
     "@angular/platform-browser-dynamic": "^16.2.12",
     "@angular/router": "^16.2.12",
     "@auth0/angular-jwt": "^5.0.1",
-    "@fortawesome/angular-fontawesome": "^0.12.0",
+    "@fortawesome/angular-fontawesome": "^0.13.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^14.2.0",
-    "@ngx-translate/core": "^13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.6",
     "all": "0.0.0",
@@ -43,11 +43,11 @@
     "leaflet-geosearch": "3.6.1",
     "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.29.4",
-    "monaco-editor": "^0.34.1",
+    "monaco-editor": "^0.41.0",
     "ng": "0.0.0",
-    "ng-inline-svg": "^11.0.0",
-    "ngx-cookie-service": "^15.0.0",
-    "ngx-monaco-editor-v2": "^15.0.1",
+    "ng-inline-svg-2": "^15.0.1",
+    "ngx-cookie-service": "^16.1.0",
+    "ngx-monaco-editor-v2": "^16.0.1",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
     "proj4leaflet": "^1.0.2",
@@ -61,15 +61,15 @@
     "@angular-devkit/build-angular": "^16.2.14",
     "@angular/cli": "^16.2.14",
     "@angular/compiler-cli": "^16.2.12",
-    "@ngrx/store-devtools": "^15.4.0",
+    "@ngrx/store-devtools": "^16.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "^1.9.8",
     "@types/leaflet.fullscreen": "^3.0.2",
     "@types/leaflet.markercluster": "1.5.3",
-    "@types/proj4leaflet": "^1.0.10",
     "@types/node": "^12.11.1",
+    "@types/proj4leaflet": "^1.0.10",
     "codelyzer": "^6.0.2",
     "eslint": "^7.3.1",
     "jasmine-core": "^3.8.0",
