--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
-    "@angular/cdk": "^16.2.14",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
     "@angular/forms": "^17.3.12",
     "@angular/localize": "^17.3.12",
-    "@angular/material": "^16.2.14",
-    "@angular/material-moment-adapter": "^16.2.14",
+    "@angular/material": "^17.3.10",
+    "@angular/material-moment-adapter": "^17.3.10",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@auth0/angular-jwt": "^5.0.1",
-    "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "^15.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.6",
@@ -43,11 +43,11 @@
     "leaflet-geosearch": "3.6.1",
     "leaflet.fullscreen": "^3.0.1",
     "moment": "^2.29.4",
-    "monaco-editor": "^0.41.0",
+    "monaco-editor": "^0.44.0",
     "ng": "0.0.0",
     "ng-inline-svg-2": "^15.0.1",
-    "ngx-cookie-service": "^16.1.0",
-    "ngx-monaco-editor-v2": "^16.0.1",
+    "ngx-cookie-service": "^17.1.0",
+    "ngx-monaco-editor-v2": "^17.0.1",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
     "proj4leaflet": "^1.0.2",
@@ -61,7 +61,7 @@
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.12",
-    "@ngrx/store-devtools": "^16.3.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^3.1.0",
@@ -89,6 +89,8 @@
     "typescript": "~5.4.5"
   },
   "overrides": {
+    "@angular/core": "^17.3.12",
+    "@angular/common": "^17.3.12",
     "postcss": "^8.4.31",
     "tough-cookie": "^4.1.4",
     "xml2js": "^0.6.2",
