--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -5,6 +5,9 @@ server {
     index index.html;
 
     location / {
+        # Security header
+        add_header Referrer-Policy "no-referrer-when-downgrade";
+        add_header X-Frame-Options "DENY" always;
         #if ($request_method = 'OPTIONS') {
         #    add_header 'Access-Control-Allow-Origin' '*' always;
         #    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
