--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "3.6.1",
-    "leaflet.fullscreen": "^3.0.1",
+    "leaflet.fullscreen": "3.0.1",
     "moment": "^2.29.4",
     "monaco-editor": "^0.44.0",
     "ng": "0.0.0",
@@ -50,7 +50,8 @@
     "ngx-monaco-editor-v2": "^17.0.1",
     "ngx-papaparse": "^5.0.0",
     "popper.js": "^1.16.1",
-    "proj4leaflet": "^1.0.2",
+    "proj4": "2.12.1",
+    "proj4leaflet": "1.0.2",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
@@ -65,11 +66,12 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/jwt-decode": "^3.1.0",
-    "@types/leaflet": "^1.9.8",
+    "@types/leaflet": "1.9.17",
     "@types/leaflet.fullscreen": "^3.0.2",
     "@types/leaflet.markercluster": "1.5.3",
-    "@types/node": "^12.11.1",
-    "@types/proj4leaflet": "^1.0.10",
+    "@types/node": "^18.11.1",
+    "@types/proj4": "2.5.5",
+    "@types/proj4leaflet": "1.0.10",
     "codelyzer": "^6.0.2",
     "eslint": "^7.3.1",
     "jasmine-core": "^3.8.0",
