Start of update

--- a/package.json
+++ b/package.json
@@ -52,19 +52,20 @@
     "popper.js": "^1.16.1",
     "proj4": "2.12.1",
     "proj4leaflet": "1.0.2",
-    "rxjs": "~6.6.7",
+    "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
     "tslint": "~6.1.0",
     "ua-parser-js": "^1.0.33",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
+    "@angular-devkit/build-angular": "^17.3.17",
+    "@angular/cli": "^17.3.17",
     "@angular/compiler-cli": "^17.3.12",
     "@ngrx/store-devtools": "^17.2.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "1.9.17",
     "@types/leaflet.fullscreen": "^3.0.2",
@@ -82,17 +83,13 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "leaflet.markercluster": "1.5.3",
-    "ngrx-store-freeze": "^0.2.4",
     "prettier": "^2.0.5",
-    "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint-angular": "^3.0.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~5.4.5"
   },
   "overrides": {
-    "@angular/core": "^17.3.12",
-    "@angular/common": "^17.3.12",
     "postcss": "^8.4.31",
     "tough-cookie": "^4.1.4",
     "xml2js": "^0.6.2",
