--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,9 +11,10 @@
         "moduleResolution": "node",
         "importHelpers": true,
         "target": "es2022",
-        "lib": ["es2018", "dom"],
+        "lib": ["es2018", "dom", "ESNext"],
         "allowSyntheticDefaultImports": true,
         "typeRoots": ["node_modules/@types"],
+        "types": ["node"],
         "paths": {
             "@shared-material": ["src/app/shared/modules/material.module"],
             "@shared/*": ["src/app/shared/*"],
