--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,17 @@
         "outDir": "./dist/out-tsc",
         "sourceMap": true,
         "declaration": false,
-        "downlevelIteration": true,
+        "esModuleInterop": true,
         "experimentalDecorators": true,
         "module": "es2020",
         "moduleResolution": "node",
         "importHelpers": true,
         "target": "es2022",
-        "lib": ["es2018", "dom", "ESNext"],
-        "allowSyntheticDefaultImports": true,
+        "lib": [
+          "es2018",
+          "dom",
+          "ESNext"
+        ],
         "typeRoots": ["node_modules/@types"],
         "types": ["node"],
         "paths": {
