--- a/package.json
+++ b/package.json
@@ -12,30 +12,28 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^20.3.7",
-    "@angular/cdk": "^19.2.19",
+    "@angular/cdk": "^20.2.10",
     "@angular/common": "^20.3.7",
     "@angular/compiler": "^20.3.7",
     "@angular/core": "^20.3.7",
     "@angular/forms": "^20.3.7",
     "@angular/localize": "^20.3.7",
-    "@angular/material": "^19.2.19",
-    "@angular/material-moment-adapter": "^19.2.19",
+    "@angular/material": "^20.2.10",
+    "@angular/material-moment-adapter": "^20.2.10",
     "@angular/platform-browser": "^20.3.7",
     "@angular/platform-browser-dynamic": "^20.3.7",
     "@angular/router": "^20.3.7",
-    "@auth0/angular-jwt": "^5.0.1",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
-    "@popperjs/core": "^2.11.6",
-    "all": "0.0.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "5.0.0-alpha2",
-    "chart.js": "^3.7.1",
+    "bootstrap": "5.3.8",
+    "chart.js": "^4.5.1",
     "file-saver": "^2.0.2",
     "guid-typescript": "^1.0.9",
     "jwt-decode": "^3.1.2",
@@ -70,11 +68,10 @@
     "@types/leaflet": "1.9.17",
     "@types/leaflet.fullscreen": "^3.0.2",
     "@types/leaflet.markercluster": "1.5.3",
-    "@types/node": "^18.11.1",
+    "@types/node": "^18.19.130",
     "@types/proj4": "2.5.5",
     "@types/proj4leaflet": "1.0.10",
-    "codelyzer": "^6.0.2",
-    "eslint": "^7.3.1",
+    "eslint": "^9.38.0",
     "jasmine-core": "^3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.1",
