Update bootstrap dropdown

--- a/angular.json
+++ b/angular.json
@@ -40,7 +40,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ],
             "extractLicenses": false,
