--- a/package.json
+++ b/package.json
@@ -26,34 +26,29 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/angular-fontawesome": "^3.0.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^17.0.0",
+    "@popperjs/core": "^2.11.8",
     "animate.css": "^4.1.1",
     "bootstrap": "5.3.8",
     "chart.js": "^4.5.1",
-    "file-saver": "^2.0.2",
-    "guid-typescript": "^1.0.9",
-    "jwt-decode": "^3.1.2",
+    "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "3.6.1",
     "leaflet.fullscreen": "3.0.1",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "monaco-editor": "^0.52.2",
-    "ng": "0.0.0",
-    "ng-inline-svg-2": "^15.0.1",
+    "ng-inline-svg-2": "^20.0.1",
     "ngx-cookie-service": "^20.1.0",
     "ngx-monaco-editor-v2": "^20.3.0",
-    "ngx-papaparse": "^5.0.0",
-    "popper.js": "^1.16.1",
+    "ngx-papaparse": "^8.0.0",
     "proj4": "2.12.1",
     "proj4leaflet": "1.0.2",
-    "rxjs": "^7.4.0",
-    "tslib": "^2.0.0",
-    "tslint": "~6.1.0",
-    "ua-parser-js": "^1.0.33",
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
@@ -61,27 +56,26 @@
     "@angular/cli": "^20.3.7",
     "@angular/compiler-cli": "^20.3.7",
     "@ngrx/store-devtools": "^20.1.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasmine": "~5.1.12",
+    "@types/jasminewd2": "~2.0.13",
     "@types/jest": "^30.0.0",
-    "@types/jwt-decode": "^3.1.0",
     "@types/leaflet": "1.9.17",
-    "@types/leaflet.fullscreen": "^3.0.2",
+    "@types/leaflet.fullscreen": "^3.0.3",
     "@types/leaflet.markercluster": "1.5.3",
-    "@types/node": "^18.19.130",
+    "@types/node": "^24.9.1",
     "@types/proj4": "2.5.5",
     "@types/proj4leaflet": "1.0.10",
     "eslint": "^9.38.0",
-    "jasmine-core": "^3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "jasmine-core": "^5.12.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "leaflet.markercluster": "1.5.3",
-    "prettier": "^2.0.5",
-    "ts-node": "~8.3.0",
+    "prettier": "^3.6.2",
+    "ts-node": "~10.9.2",
     "tslint-angular": "^3.0.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~5.8.3"
